--- a/trunk/Monoxide/TestApplication/ChangeLog
+++ b/trunk/Monoxide/TestApplication/ChangeLog
@@ -1,3 +1,7 @@
+2011-10-09  Fabien  <goldencrystal@gmail.com>
+
+	* MyApplication.cs: 
+
 2010-11-29  Fabien  <goldencrystal@gmail.com>
 
 	* MainWindow.cs: Testing the new path drawing capabilities…
